--- a/proxy.conf
+++ b/proxy.conf
@@ -1,4 +1,3 @@
-
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=24h  max_size=1g;
 server {
   listen       80;
@@ -7,7 +6,7 @@ server {
   location / {
     proxy_redirect         off;
     proxy_pass             http://music.163.com/;
-    proxy_set_header       X-Real-IP 118.88.88.88;
+    proxy_set_header       X-Real-IP ${X-Real-IP};
     proxy_cache            STATIC;
     proxy_cache_valid      200  1d;
     proxy_cache_use_stale  error timeout invalid_header updating http_500 http_502 http_503 http_504;
