--- a/proxy.conf.template
+++ b/proxy.conf.template
@@ -6,7 +6,7 @@ server {
   location / {
     proxy_redirect         off;
     proxy_pass             http://music.163.com/;
-    proxy_set_header       X-Real-IP ${X-Real-IP};
+    proxy_set_header       X-Real-IP {{.Env.X_REAL_IP}};
     proxy_cache            STATIC;
     proxy_cache_valid      200  1d;
     proxy_cache_use_stale  error timeout invalid_header updating http_500 http_502 http_503 http_504;
